examples/objects/knative-service.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: my-app
spec:
  template:
    spec:
      containerConcurrency: 20
      containers:
      - image: nginx:1.7.9
        name: my-app
        ports:
          - containerPort: 80
