examples/objects/my-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  type: LoadBalancer
  ports:
  - port: 8080 # the port that this service should serve on

    # the port in each pod to connect to; can be a name
    # (e.g. 'www') or a number (e.g. 80)
    targetPort: 80
    protocol: TCP

  # just like the selector in the deployment,
  # but this time it identifies the set of pods to load balance traffic to.
  selector:
    app: my-app
